testcases/negative/invalid_date_format.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
BDAY:January 1st, 1990
END:VCARD
